@@ -410,7 +410,7 @@ public class CustomerFilterDto {
   public static void validateJsonElement(JsonElement jsonElement) throws IOException {
       if (jsonElement == null) {
         if (!CustomerFilterDto.openapiRequiredFields.isEmpty()) { // has required fields but JSON element is null
-          throw new IllegalArgumentException("The required field(s) %s in CustomerFilterDto is not found in the empty JSON string".formatted(CustomerFilterDto.openapiRequiredFields.toString()));
+          throw new IllegalArgumentException(String.format("The required field(s) %s in CustomerFilterDto is not found in the empty JSON string", CustomerFilterDto.openapiRequiredFields.toString()));
         }
       }
 
@@ -418,30 +418,30 @@ public class CustomerFilterDto {
       // check to see if the JSON string contains additional fields
       for (Map.Entry<String, JsonElement> entry : entries) {
         if (!CustomerFilterDto.openapiFields.contains(entry.getKey())) {
-          throw new IllegalArgumentException("The field `%s` in the JSON string is not defined in the `CustomerFilterDto` properties. JSON: %s".formatted(entry.getKey(), jsonElement.toString()));
+          throw new IllegalArgumentException(String.format("The field `%s` in the JSON string is not defined in the `CustomerFilterDto` properties. JSON: %s", entry.getKey(), jsonElement.toString()));
         }
       }
         JsonObject jsonObj = jsonElement.getAsJsonObject();
       if ((jsonObj.get("search_text") != null && !jsonObj.get("search_text").isJsonNull()) && !jsonObj.get("search_text").isJsonPrimitive()) {
-        throw new IllegalArgumentException("Expected the field `search_text` to be a primitive type in the JSON string but got `%s`".formatted(jsonObj.get("search_text").toString()));
+        throw new IllegalArgumentException(String.format("Expected the field `search_text` to be a primitive type in the JSON string but got `%s`", jsonObj.get("search_text").toString()));
       }
       if ((jsonObj.get("plz_query") != null && !jsonObj.get("plz_query").isJsonNull()) && !jsonObj.get("plz_query").isJsonPrimitive()) {
-        throw new IllegalArgumentException("Expected the field `plz_query` to be a primitive type in the JSON string but got `%s`".formatted(jsonObj.get("plz_query").toString()));
+        throw new IllegalArgumentException(String.format("Expected the field `plz_query` to be a primitive type in the JSON string but got `%s`", jsonObj.get("plz_query").toString()));
       }
       // ensure the optional json data is an array if present
       if (jsonObj.get("customer_types") != null && !jsonObj.get("customer_types").isJsonNull() && !jsonObj.get("customer_types").isJsonArray()) {
-        throw new IllegalArgumentException("Expected the field `customer_types` to be an array in the JSON string but got `%s`".formatted(jsonObj.get("customer_types").toString()));
+        throw new IllegalArgumentException(String.format("Expected the field `customer_types` to be an array in the JSON string but got `%s`", jsonObj.get("customer_types").toString()));
       }
       // ensure the optional json data is an array if present
       if (jsonObj.get("reseller_types") != null && !jsonObj.get("reseller_types").isJsonNull() && !jsonObj.get("reseller_types").isJsonArray()) {
-        throw new IllegalArgumentException("Expected the field `reseller_types` to be an array in the JSON string but got `%s`".formatted(jsonObj.get("reseller_types").toString()));
+        throw new IllegalArgumentException(String.format("Expected the field `reseller_types` to be an array in the JSON string but got `%s`", jsonObj.get("reseller_types").toString()));
       }
       // ensure the optional json data is an array if present
       if (jsonObj.get("tags") != null && !jsonObj.get("tags").isJsonNull() && !jsonObj.get("tags").isJsonArray()) {
-        throw new IllegalArgumentException("Expected the field `tags` to be an array in the JSON string but got `%s`".formatted(jsonObj.get("tags").toString()));
+        throw new IllegalArgumentException(String.format("Expected the field `tags` to be an array in the JSON string but got `%s`", jsonObj.get("tags").toString()));
       }
       if ((jsonObj.get("start_character") != null && !jsonObj.get("start_character").isJsonNull()) && !jsonObj.get("start_character").isJsonPrimitive()) {
-        throw new IllegalArgumentException("Expected the field `start_character` to be a primitive type in the JSON string but got `%s`".formatted(jsonObj.get("start_character").toString()));
+        throw new IllegalArgumentException(String.format("Expected the field `start_character` to be a primitive type in the JSON string but got `%s`", jsonObj.get("start_character").toString()));
       }
       // validate the optional field `sort_type`
       if (jsonObj.get("sort_type") != null && !jsonObj.get("sort_type").isJsonNull()) {
