@@ -202,7 +202,7 @@ public class SlasconeLicenseInfoDto {
   public static void validateJsonElement(JsonElement jsonElement) throws IOException {
       if (jsonElement == null) {
         if (!SlasconeLicenseInfoDto.openapiRequiredFields.isEmpty()) { // has required fields but JSON element is null
-          throw new IllegalArgumentException("The required field(s) %s in SlasconeLicenseInfoDto is not found in the empty JSON string".formatted(SlasconeLicenseInfoDto.openapiRequiredFields.toString()));
+          throw new IllegalArgumentException(String.format("The required field(s) %s in SlasconeLicenseInfoDto is not found in the empty JSON string", SlasconeLicenseInfoDto.openapiRequiredFields.toString()));
         }
       }
 
@@ -210,7 +210,7 @@ public class SlasconeLicenseInfoDto {
       // check to see if the JSON string contains additional fields
       for (Map.Entry<String, JsonElement> entry : entries) {
         if (!SlasconeLicenseInfoDto.openapiFields.contains(entry.getKey())) {
-          throw new IllegalArgumentException("The field `%s` in the JSON string is not defined in the `SlasconeLicenseInfoDto` properties. JSON: %s".formatted(entry.getKey(), jsonElement.toString()));
+          throw new IllegalArgumentException(String.format("The field `%s` in the JSON string is not defined in the `SlasconeLicenseInfoDto` properties. JSON: %s", entry.getKey(), jsonElement.toString()));
         }
       }
         JsonObject jsonObj = jsonElement.getAsJsonObject();
@@ -219,7 +219,7 @@ public class SlasconeLicenseInfoDto {
         SlasconeLicensingState.validateJsonElement(jsonObj.get("slascone_licensing_state"));
       }
       if ((jsonObj.get("error_message") != null && !jsonObj.get("error_message").isJsonNull()) && !jsonObj.get("error_message").isJsonPrimitive()) {
-        throw new IllegalArgumentException("Expected the field `error_message` to be a primitive type in the JSON string but got `%s`".formatted(jsonObj.get("error_message").toString()));
+        throw new IllegalArgumentException(String.format("Expected the field `error_message` to be a primitive type in the JSON string but got `%s`", jsonObj.get("error_message").toString()));
       }
       // validate the optional field `slascone_license_info`
       if (jsonObj.get("slascone_license_info") != null && !jsonObj.get("slascone_license_info").isJsonNull()) {
